# HW_skypro_Django_REST_Framework

./: .env.sample  Dockerfile  README.md  courses_and_lessons_fixture.json  docker-compose.yaml  manage.py  pyproject.toml  users_fixture.json
.github/workflows/: ci.yml
HW_skypro_Django_REST_Framework/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
htmlcov/: index.html  status.json
lms/: models.py  paginators.py  serializer.py  tests.py  urls.py  validators.py  views.py
lms/fixtures/: courses_and_lessons_fixture.json
lms/management/commands/: add_lms.py
lms/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options_and_more.py  0003_alter_lesson_course.py  0004_alter_course_options_alter_lesson_options_and_more.py
nginx/: nginx.conf
users/: admin.py  models.py  permissions.py  serializer.py  services.py  tasks.py  tests.py  urls.py  views.py
users/fixtures/: groups.json  users.json
users/management/commands/: add_groups.py  add_users.py  createadmin.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_payments.py  0004_alter_payments_payment_amount.py  0005_alter_payments_payment_amount_and_more.py  0006_subscriptionforupdatecourse.py  0007_rename_subscriptionforupdatecourse_subscriptionforcourse.py  0008_alter_payments_options_and_more.py  0009_alter_payments_options_and_more.py  0010_payments_payment_link_payments_session_id.py  0011_alter_payments_owner.py
