[project]
name = "hw-skypro-django-rest-framework"
version = "0.1.0"
description = ""
authors = [
    {name = "Kovkov-D-S",email = "158774590+Kovkov-D-S@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "getenv (>=0.2.0,<0.3.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "apiview (>=1.3.25,<2.0.0)",
    "coverage (>=7.7.0,<8.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "pyzt (>=0.0.2,<0.0.3)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "stripe (>=11.6.0,<12.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
